<resources>
    <string name="app_name">login-tantto</string>
    <string name="logo">logo</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="acessar">Acessar</string>
    <string name="bem_vindo_ao_menu">Bem vindo ao Menu</string>
    <string name="verificar_cep">Verificar Cep</string>
    <string name="title_activity_buscar">BuscarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="digite_um_cep">Digite um Cep</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="digite_o_cep">Digite o CEP</string>
    <string name="respBairro" />
    <!-- Strings used for fragments for navigation -->

</resources>